--- a/03-counter-app/src/index.css
+++ b/03-counter-app/src/index.css
@@ -6,3 +6,11 @@ body {
 	font-family: Helvetica, Arial, sans-serif;
 	padding: 70px;
 }
+
+button {
+	font-size: 1.3rem;
+	font-weight: bold;
+	margin-right: 10px;
+	padding: 20px;
+	cursor: pointer;
+}
