Seccion 17 - 11. Sidebar - JournalEntries

--- a/08-journal-app/src/styles/components/_journal.scss
+++ b/08-journal-app/src/styles/components/_journal.scss
@@ -44,7 +44,7 @@
 .journal__entries {
     flex: 1 1 auto;
     margin-top: 30px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .journal__entry {
@@ -53,6 +53,7 @@
     color: $dark-grey;
     display: flex;
     margin-bottom: 10px;
+    margin-right: 5px;
     overflow: hidden;
 }
 
