--- a/08-journal-app/src/styles/components/_journal.scss
+++ b/08-journal-app/src/styles/components/_journal.scss
@@ -55,6 +55,7 @@
     margin-bottom: 10px;
     margin-right: 5px;
     overflow: hidden;
+    justify-content: space-between;
 }
 
 .journal__entry-picture {
